推广有礼页面信息处理

--- a/src/main/resources/views/modules/filecoin/highway.html
+++ b/src/main/resources/views/modules/filecoin/highway.html
@@ -287,53 +287,53 @@
                         <div class="content-body">
                             <div class="row">
                                 <div class="col-lg-4 col-sm-6 col-xs-12">
-                                    <div class="r4_counter db_box has-register-to-right-bottom">
+                                    <div id="invCodeDiv" class="r4_counter db_box has-register-to-right-bottom">
                                         <div class="icon-after icon-invitea"></div>
                                         <i class='pull-left icon-invitea icon-md icon-white mt-10'></i>
                                         <div class="stats">
                                             <h3 class="color-white mb-5" id="invitationCode_h3">邀请码： </h3>
-                                            <span>邀请新人注册使用。限使用10次，剩余邀请<span class="systeminfo" id="invitationCode_h3_lit">10</span>次。</span>
+                                            <span>邀请新人注册使用。限使用10次，剩余邀请<span class="systeminfo"></span>次。</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-sm-6 col-xs-12">
-                                    <div class="r4_counter db_box has-gray-to-right-bottom">
+                                    <div id="invCountDiv" class="r4_counter db_box has-gray-to-right-bottom">
                                         <div class="icon-after icon-invite"></div>
                                         <i class='pull-left icon-invite icon-md icon-white mt-10'></i>
                                         <div class="stats">
-                                            <h3 class="color-white mb-5" id="invitationCount_h3">邀请人数：0 / 10</h3>
-                                            <span>邀请好友费率最高0折，还能邀请<span class="systeminfo" id="invitationCode_h3_lit_2"></span>人。</span>
+                                            <h3 class="color-white mb-5">邀请人数：0 / 10</h3>
+                                            <span>邀请好友费率最高0折，还能邀请<span class="systeminfo"></span>人。</span>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-4 col-sm-6 col-xs-12">
-                                    <div class="r4_counter db_box has-gray-to-right-bottom">
+                                    <div id="invZkjDiv" class="r4_counter db_box has-gray-to-right-bottom">
                                         <div class="icon-after icon-coupon"></div>
                                         <i class='pull-left icon-coupon icon-md icon-white mt-10'></i>
                                         <div class="stats">
                                             <h3 class="color-white mb-5">折扣券：300 元</h3>
-                                            <span>价值 300元 , 再邀请<span class="systeminfo" id="invitationCountLit_h3"></span>人后可用，限购买矿机使用。</span>
+                                            <span>价值 300元 , 再邀请<span class="systeminfo"></span>人后可用，限购买矿机使用。</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-sm-6 col-xs-12">
-                                    <div class="r4_counter db_box has-gray-to-right-bottom">
+                                    <div id="invZxflDiv" class="r4_counter db_box has-gray-to-right-bottom">
                                         <div class="icon-after icon-loading_percentage"></div>
                                         <i class='pull-left icon-loading_percentage icon-md icon-white icon-primary mt-10'></i>
                                         <div class="stats">
-                                            <h3 class="color-white mb-5" id="invitationRate_h3">执行费率： %</h3>
+                                            <h3 class="color-white mb-5">执行费率： %</h3>
                                             <span>有效期主网上线一个月。剩余<span class="systeminfo">30</span>天。</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-sm-6 col-xs-12">
-                                    <div class="r4_counter db_box has-gray-to-right-bottom">
+                                    <div id="invCjmDiv" class="r4_counter db_box has-gray-to-right-bottom">
                                         <div class="icon-after icon-luck_draw"></div>
                                         <i class='pull-left icon-luck_draw icon-white icon-md icon-primary mt-10'></i>
                                         <div class="stats">
-                                            <h3 class="color-white mb-5" id="invitationLotteryCode_h3">抽奖码：</h3>
-                                            <span>再邀请<span class="systeminfo" id="invitationCode_h3_lit_3"></span>人后可参与抽奖活动，奖品IPFS矿机一台.</span>
+                                            <h3 class="color-white mb-5">抽奖码：</h3>
+                                            <span>再邀请<span class="systeminfo"></span>人后可参与抽奖活动，奖品IPFS矿机一台.</span>
                                         </div>
                                     </div>
                                 </div>
@@ -508,8 +508,8 @@
                             </header>
                             <div class="content-body">    
                                 <div class="row">
-                                    <div class="col-lg-8">
-                                        <h4 class="bold no-mt" id="invitationLotteryCode_h3_2">您的抽奖码为：E3RT3D</h4>
+                                    <div id="invKJCJDiv" class="col-lg-8">
+                                        <h4 class="bold no-mt">您的抽奖码为：</h4>
                                         <h4 class="mb-10"><small>邀请10名好友注册后，即有资格参加矿机抽奖活动</small></h4>
                                     </div>
                                     <div class="clearfix"></div>
