--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -1,6 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+	<!--
+        * @Package: ipfsun.com
+        * @Version: 1.0.0
+    -->
 	<meta charset="UTF-8" />
 	<title>IPFS星际云矿池会员注册</title>
 	<link rel="stylesheet" href="../../filecoin/register/css/base.css" />
