每个页面都分配单独的js,以便于混淆加密

--- a/src/main/resources/views/modules/filecoin/faq.html
+++ b/src/main/resources/views/modules/filecoin/faq.html
@@ -483,13 +483,10 @@
 
     <!-- 登录js -->
     <script src="../../js/modules/filecoin/login.js"></script>
+    <script src="../../js/modules/filecoin/faq.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
     <script >
         var ctx = "";
-        $(function(){
-            LoginFunc.getLoginUser();
-        });
-
     </script>
 
 </body>
