--- a/src/main/resources/views/modules/filecoin/highway.html
+++ b/src/main/resources/views/modules/filecoin/highway.html
@@ -761,14 +761,10 @@
     <!-- 登录js -->
     <script src="../../js/modules/filecoin/login.js"></script>
     <script src="../../js/modules/filecoin/invitationcode.js"></script>
+    <script src="../../js/modules/filecoin/highway.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
     <script >
         var ctx = "";
-        $(function(){
-            LoginFunc.getLoginUser();
-            InvitationCodeFunc.getCountByInvitationCode();
-        });
-
     </script>
 
 </body>
