--- a/src/main/resources/views/modules/filecoin/my-wallet.html
+++ b/src/main/resources/views/modules/filecoin/my-wallet.html
@@ -532,13 +532,10 @@
 
     <!-- 登录js -->
     <script src="../../js/modules/filecoin/login.js"></script>
+    <script src="../../js/modules/filecoin/mywallet.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
     <script >
         var ctx = "";
-        $(function(){
-            LoginFunc.getLoginUser();
-        });
-
     </script>
 
 </body>
