--- a/src/main/resources/views/modules/filecoin/pay.html
+++ b/src/main/resources/views/modules/filecoin/pay.html
@@ -455,13 +455,10 @@
 
     <!-- 登录js -->
     <script src="../../js/modules/filecoin/login.js"></script>
+    <script src="../../js/modules/filecoin/pay.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
-    <script >
+    <script>
         var ctx = "";
-        $(function(){
-            LoginFunc.getLoginUser();
-        });
-
     </script>
 
 </body>
