--- a/src/main/resources/views/modules/filecoin/miner.html
+++ b/src/main/resources/views/modules/filecoin/miner.html
@@ -1232,13 +1232,10 @@
 
     <!-- 登录js -->
     <script src="../../js/modules/filecoin/login.js"></script>
+    <script src="../../js/modules/filecoin/miner.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
     <script >
         var ctx = "";
-        $(function(){
-            LoginFunc.getLoginUser();
-        });
-
     </script>
 
 </body>
