--- a/src/main/resources/views/modules/filecoin/settings.html
+++ b/src/main/resources/views/modules/filecoin/settings.html
@@ -565,13 +565,10 @@
 
 <!-- 登录js -->
 <script src="../../js/modules/filecoin/login.js"></script>
+<script src="../../js/modules/filecoin/settings.js"></script>
 <!-- END CORE TEMPLATE JS - END -->
 <script>
     var ctx = "";
-    $(function () {
-        LoginFunc.getLoginUser();
-    });
-
 </script>
 
 </body>
