--- a/src/main/resources/views/modules/filecoin/my-wallet.html
+++ b/src/main/resources/views/modules/filecoin/my-wallet.html
@@ -200,7 +200,7 @@
                         </a>
                     </li>
                     <li class="">
-                        <a href="index-trading-view.html">
+                        <a href="miner.html">
                             <i class="fa fa-bullseye"></i>
                             <span class="title">矿工管理</span>
                         </a>
