--- a/src/main/resources/views/modules/filecoin/pay.html
+++ b/src/main/resources/views/modules/filecoin/pay.html
@@ -206,7 +206,7 @@
                         </a>
                     </li>
                     <li class="open">
-                        <a href="index-marketcap.html">
+                        <a href="pay.html">
                             <i class="fa fa-flash"></i>
                             <span class="title">付款记录</span>
                         </a>
