--- a/src/main/resources/views/modules/filecoin/security.html
+++ b/src/main/resources/views/modules/filecoin/security.html
@@ -200,13 +200,13 @@
                         </a>
                     </li>
                     <li class="">
-                        <a href="index-trading-view.html">
+                        <a href="miner.html">
                             <i class="fa fa-bullseye"></i>
                             <span class="title">矿工管理</span>
                         </a>
                     </li>
                     <li class="">
-                        <a href="index-marketcap.html">
+                        <a href="pay.html">
                             <i class="fa fa-flash"></i>
                             <span class="title">付款记录</span>
                         </a>
