--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -4,17 +4,17 @@
 <!--<![endif]-->
 
 <head>
-  <!-- =====  basic page needs  ===== -->
+  <!-- =====  BASIC PAGE NEEDS  ===== -->
   <meta charset="utf-8">
   <title>ipfs-星际云矿池中国官方网站--ipfs 挖矿教程</title>
-  <!-- =====  seo mate  ===== -->
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="keywords" content="ipfs,ipfs矿池,ipfs星际云矿池,ipfs挖矿教程,ipfs挖矿,ipfs官网,ipfs filecoin官网,ipfs和storj,ipfsun,filecoin,星际网络传输协议,区块链,ipfs协议">
-  <meta name="description" content="ipfs星际文件云矿池，星际文件系统ipfs（interplanetary file system）是一个面向全球的、点对点的分布式版本文件系统，目标是为了补充（甚至是取代）目前统治互联网的超文本传输协议（http），将所有具有相同文件系统的计算设备连接在…最好的ipfs爱好者聚集地just for ipfs">
-  <!-- =====  mobile specification  ===== -->
+  <!-- =====  SEO MATE  ===== -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="keywords" content="IPFS,ipfs矿池,IPFS星际云矿池,ipfs挖矿教程,ipfs挖矿,ipfs官网,ipfs filecoin官网,ipfs和storj,ipfsun,filecoin,星际网络传输协议,区块链,ipfs协议">
+  <meta name="description" content="IPFS星际文件云矿池，星际文件系统IPFS（InterPlanetary File System）是一个面向全球的、点对点的分布式版本文件系统，目标是为了补充（甚至是取代）目前统治互联网的超文本传输协议（HTTP），将所有具有相同文件系统的计算设备连接在…最好的ipfs爱好者聚集地Just for IPFS">
+  <!-- =====  MOBILE SPECIFICATION  ===== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="viewport" content="width=device-width">
-  <!-- =====  css  ===== -->
+  <!-- =====  CSS  ===== -->
   <link rel="stylesheet" type="text/css" href="filecoin/css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="filecoin/css/menu.css">
   <link rel="stylesheet" type="text/css" href="filecoin/css/style.css">
@@ -24,33 +24,33 @@
 </head>
 
 <body id="home2" class="home2">
-<!-- =====  loder  ===== -->
+<!-- =====  LODER  ===== -->
 <div class="loder"></div>
 <div class="wrapper">
-  <!-- =====  header start  ===== -->
+  <!-- =====  HEADER START  ===== -->
   <header id="header">
     <div class="header navbar">
       <div class="container-fluid">
-        <!-- brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header pull-left"> <a class="navbar-brand" href="index.html"> <img alt="bitcoin" src="filecoin/images/logo2.png"> </a> </div>
-        <!-- collection of nav links, forms, and other content for toggling -->
-        <div id="navbarcollapse" class="navbar-collapse navbar-right">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header pull-left"> <a class="navbar-brand" href="index.html"> <img alt="Bitcoin" src="filecoin/images/logo2.png"> </a> </div>
+        <!-- Collection of nav links, forms, and other content for toggling -->
+        <div id="navbarCollapse" class="navbar-collapse navbar-right">
           <nav id="menu" class='collapse'>
-            <!-- navigation menu -->
+            <!-- Navigation Menu -->
             <ul class="nav">
               <li class="active"> <a href="#home2">首页</a></li>
               <li> <a href="#team">交流群</a></li>
               <li> <a href="modules/filecoin/login.html">登录</a></li>
               <li> <a href="modules/filecoin/regist.html">注册</a></li>
             </ul>
-            <!--end navigation menu -->
+            <!--End Navigation Menu -->
           </nav>
         </div>
       </div>
     </div>
   </header>
-  <!-- =====  header end  ===== -->
-  <!-- =====  banner strat  ===== -->
+  <!-- =====  HEADER END  ===== -->
+  <!-- =====  BANNER STRAT  ===== -->
   <div class="banner">
     <div id="particles-js"></div>
     <div class="banner-detail ">
@@ -58,35 +58,35 @@
         <h1 class="cd-headline letters type">
             <span class="cd-words-wrapper waiting">
               <b class="is-visible">星际文件系统云矿池</b>
-              <b>等待ipfs主网上线开启</b>
+              <b>等待IPFS主网上线开启</b>
               <b>内测节点开放注册</b>
             </span>
         </h1>
         <p class="mt_20 light">多节点高速带宽检索服务器，抢单神器.分布式存储调度管理系统
-          <br>根据市场行情调整出价订单算法，矿池中所有filecoin/ipfs矿机保证平均收益的稳定性，利益最大化.</p>
+          <br>根据市场行情调整出价订单算法，矿池中所有Filecoin/IPFS矿机保证平均收益的稳定性，利益最大化.</p>
         <button class="custom-btn custom-btns light" type="button"><span style="font-weight:bold;font-size:24px;font-family:'微软雅黑';" class="regeister">内测资格注册</span></button>
         <div class="home-arrow-down"> <a href="#about"><i class="fa fa-long-arrow-down"></i></a>
 
-          <p class="mt_20 light"><span class="nodesum">注册节点<span class="nodecolor">12323pcs</span></span><span class="nodesum">共享宽带<span class="nodecolor">23423mbps</span></span><span class="nodesum">共享存储<span class="nodecolorno">23423t</span></span></p>
+          <p class="mt_20 light"><span class="nodesum">注册节点<span class="nodecolor">12323pcs</span></span><span class="nodesum">共享宽带<span class="nodecolor">23423MBps</span></span><span class="nodesum">共享存储<span class="nodecolorno">23423T</span></span></p>
         </div>
       </div>
     </div>
   </div>
-  <!-- =====  banner end  ===== -->
+  <!-- =====  BANNER END  ===== -->
 
 
-  <!-- =====  about start  ===== -->
-
-
-
+  <!-- =====  ABOUT START  ===== -->
 
 
 
-  <!-- =====  about end  ===== -->
-  <!-- =====  work with us strat  ===== -->
 
-  <!-- =====  work with us end  ===== -->
-  <!-- =====  services strat  ===== -->
+
+
+  <!-- =====  ABOUT END  ===== -->
+  <!-- =====  WORK WITH US STRAT  ===== -->
+
+  <!-- =====  WORK WITH US END  ===== -->
+  <!-- =====  SERVICES STRAT  ===== -->
   <section id="service" class="pt_100 pb_50">
     <div class="container text-center">
       <div class="row">
@@ -97,7 +97,7 @@
           </div>
         </div>
       </div>
-      <!-- services  -->
+      <!-- Services  -->
       <div class="row">
         <div class="col-md-4 col-xs-6 mb_50">
           <div class="service">
@@ -123,8 +123,8 @@
         <div class="col-md-4 col-xs-6 mb_50">
           <div class="service">
             <div class="icon-top"><img src="filecoin/images/serviceicon/how-2.png" alt="#"></div>
-            <h4 class="mtb_20">ipfs最早矿池</h4>
-            <p>ipfs星际云矿池创立于2018年4月。</p>
+            <h4 class="mtb_20">IPFS最早矿池</h4>
+            <p>IPFS星际云矿池创立于2018年4月。</p>
           </div>
         </div>
         <div class="col-md-4 col-xs-6 mb_50">
@@ -137,21 +137,21 @@
         <div class="col-md-4 col-xs-6 mb_50">
           <div class="service">
             <div class="icon-top"><img src="filecoin/images/serviceicon/service-6.png" alt="#"></div>
-            <h4 class="mtb_20">超强抗ddos能力</h4>
-            <p>采用独特架构有效防范ddos攻击.</p>
+            <h4 class="mtb_20">超强抗DDoS能力</h4>
+            <p>采用独特架构有效防范DDoS攻击.</p>
           </div>
         </div>
       </div>
-      <!-- services -->
+      <!-- Services -->
     </div>
   </section>
-  <!-- =====  services end  ===== -->
-  <!-- =====  prices start  ===== -->
+  <!-- =====  SERVICES END  ===== -->
+  <!-- =====  PRICES START  ===== -->
 
-  <!-- =====  prices end  ===== -->
+  <!-- =====  PRICES END  ===== -->
 
-  <!-- =====  client start  ===== -->
-  <section id="client" class="text-center bg-dark parallax" data-source-url="filecoin/images/parallax02.jpg">
+  <!-- =====  CLIENT START  ===== -->
+  <section id="client" class="text-center bg-dark parallax" data-source-url="filecoin/images/Parallax02.jpg">
     <div class="container">
       <div class="type-01 ptb_100 ">
         <div class="row">
@@ -159,8 +159,8 @@
             <div class="client owl-carousel">
               <div class="item client-detail"> <i class="fa fa-quote-left" aria-hidden="true"></i>
                 <h2 class="main_title light mtb_30">如果你是技术大牛，请加入我们</h2>
-                <p>熟练掌握java/c++/golang任意两门语言，具备区块链项目研发经验熟悉网络编程、数据结构和加密算法，熟悉tcp、ip、http、p2p等网络协议理解各类主流的共识算法，包括不限于pow、pos、dpos、pbft、paxos、raft等熟悉ethereum、bitcoin、hyperledger fabric等主流区块链开源项目的实现机制及运行原理有加密货币或区块链技术实际实施经验。</p>
-                <div class="client-title  mt_40"><strong class="light">e-mail</strong> -
+                <p>熟练掌握Java/C++/Golang任意两门语言，具备区块链项目研发经验熟悉网络编程、数据结构和加密算法，熟悉TCP、IP、HTTP、P2P等网络协议理解各类主流的共识算法，包括不限于PoW、PoS、DPoS、PBFT、Paxos、Raft等熟悉Ethereum、Bitcoin、Hyperledger fabric等主流区块链开源项目的实现机制及运行原理有加密货币或区块链技术实际实施经验。</p>
+                <div class="client-title  mt_40"><strong class="light">E-MAIL</strong> -
                   <div class="client-designation">79604722@qq.com</div>
                 </div>
               </div>
@@ -179,26 +179,26 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="heading-part ">
-            <h2 class="main_title mb_20">ipfs星际云矿池俱乐部</h2>
-            <p class="mb_50">提供ipfs爱好者一个可以交流的平台.</p>
+            <h2 class="main_title mb_20">IPFS星际云矿池俱乐部</h2>
+            <p class="mb_50">提供IPFS爱好者一个可以交流的平台.</p>
           </div>
         </div>
       </div>
       <div class="row">
-        <!--team carousel -->
+        <!--Team Carousel -->
         <div class="team_grid">
           <div class="team3col  owl-carousel">
             <div class="item team-detail">
               <div class="team-item-img"> <img src="filecoin/images/tm1.jpg"> </div>
-              <div class="team-designation mt_20">官方qq_1群</div>
-              <h3 class="team-title  mt_10 mb_20"><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=b7f37e51b200f59acf4f4b49f429c9f7be9590b08325fa6c8be5d17fb0c0564a"><img style="display:block;width:90px;margin-left:auto;margin-right:auto;margin-bottom:10px;" border="0" src="filecoin/images/group.png" alt="ipfs挖矿矿池交流群" title="ipfs挖矿矿池交流群">22138062</a>
+              <div class="team-designation mt_20">官方QQ_1群</div>
+              <h3 class="team-title  mt_10 mb_20"><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=b7f37e51b200f59acf4f4b49f429c9f7be9590b08325fa6c8be5d17fb0c0564a"><img style="display:block;width:90px;margin-left:auto;margin-right:auto;margin-bottom:10px;" border="0" src="filecoin/images/group.png" alt="IPFS挖矿矿池交流群" title="IPFS挖矿矿池交流群">22138062</a>
               </h3>
 
             </div>
             <div class="item team-detail">
               <div class="team-item-img"> <img src="filecoin/images/tm2.jpg"> </div>
-              <div class="team-designation mt_20">官方qq_2群</div>
-              <h3 class="team-title  mt_10 mb_20"><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=c4edd78905015f60a969703679d374b9d3f0f900a35e580a7e079fc16227a8ee"><img border="0" style="display:block;width:90px;margin-left:auto;margin-right:auto;margin-bottom:10px;" src="filecoin/images/group.png" alt="ipfs挖矿矿池交流群" title="ipfs挖矿矿池交流群">22138088</a>
+              <div class="team-designation mt_20">官方QQ_2群</div>
+              <h3 class="team-title  mt_10 mb_20"><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=c4edd78905015f60a969703679d374b9d3f0f900a35e580a7e079fc16227a8ee"><img border="0" style="display:block;width:90px;margin-left:auto;margin-right:auto;margin-bottom:10px;" src="filecoin/images/group.png" alt="IPFS挖矿矿池交流群" title="IPFS挖矿矿池交流群">22138088</a>
               </h3>
 
             </div>
@@ -212,27 +212,27 @@
           </div>
         </div>
       </div>
-      <!--end team carousel -->
+      <!--End Team Carousel -->
     </div>
   </section>
-  <!-- =====  client end  ===== -->
-  <!-- =====  blogs start  ===== -->
+  <!-- =====  CLIENT END  ===== -->
+  <!-- =====  BLOGS START  ===== -->
   <section id="blogs" class="text-center ptb_100">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="heading-part ">
             <h2 class="main_title mb_20">软件下载</h2>
-            <p class="mb_50">星际文件系统ipfs软件正在开发中</p>
+            <p class="mb_50">星际文件系统IPFS软件正在开发中</p>
           </div>
         </div>
       </div>
-      <!-- blog items  -->
+      <!-- Blog items  -->
       <div id="blog-post" class="blog owl-carousel ">
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"> <a href="filecoin/images/blog/blog01.jpg" title="ipfs" data-source="filecoin/images/blog/blog01.jpg"> <img src="filecoin/images/blog/blog01.jpg"  alt="bitcoin"></a> </div>
+              <div class="thumb post-img"> <a href="filecoin/images/blog/blog01.jpg" title="ipfs" data-source="filecoin/images/blog/blog01.jpg"> <img src="filecoin/images/blog/blog01.jpg"  alt="Bitcoin"></a> </div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">windows版本开发中</a> </h2>
@@ -244,10 +244,10 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a href="filecoin/images/blog/blog03.jpg" title="ipfs" data-source="filecoin/images/blog/blog03.jpg"> <img src="filecoin/images/blog/blog03.jpg"  alt="bitcoin"></a></div>
+              <div class="thumb post-img"><a href="filecoin/images/blog/blog03.jpg" title="ipfs" data-source="filecoin/images/blog/blog03.jpg"> <img src="filecoin/images/blog/blog03.jpg"  alt="Bitcoin"></a></div>
             </div>
             <div class="post-info mt_20 ">
-              <h2 class="mb_10"> <a href="#">linux版本开发中</a> </h2>
+              <h2 class="mb_10"> <a href="#">Linux版本开发中</a> </h2>
 
             </div>
           </div>
@@ -255,7 +255,7 @@
         <div class="blog-item item text-left">
           <div class="box-holder">
             <div class="post-format">
-              <div class="thumb post-img"><a href="filecoin/images/blog/blog04.jpg" title="ipfs" data-source="filecoin/images/blog/blog04.jpg"> <img src="filecoin/images/blog/blog04.jpg"  alt="bitcoin"></a></div>
+              <div class="thumb post-img"><a href="filecoin/images/blog/blog04.jpg" title="ipfs" data-source="filecoin/images/blog/blog04.jpg"> <img src="filecoin/images/blog/blog04.jpg"  alt="Bitcoin"></a></div>
             </div>
             <div class="post-info mt_20 ">
               <h2 class="mb_10"> <a href="#">系统镜像下载开发中</a> </h2>
@@ -271,14 +271,14 @@
       </div>
     </div>
   </section>
-  <!-- =====  blogs end  ===== -->
-  <!-- =====  work with us strat  ===== -->
+  <!-- =====  BLOGS END  ===== -->
+  <!-- =====  WORK WITH US STRAT  ===== -->
 
-  <!-- =====  work with us end  ===== -->
-  <!-- =====  contact start  ===== -->
+  <!-- =====  WORK WITH US END  ===== -->
+  <!-- =====  CONTACT START  ===== -->
 
-  <!-- =====  contact end  ===== -->
-  <!-- =====  footer start  ===== -->
+  <!-- =====  CONTACT END  ===== -->
+  <!-- =====  FOOTER START  ===== -->
   <div class="footer bg-dark ptb_100">
     <div class="container">
       <div class="row">
@@ -286,7 +286,7 @@
           <div class="footer-link">
             商务合作： 79604722@qq.com   客服邮箱： support@ipfsun.com
           </div>
-          <div class="copyright-part mtb_10">copyright &copy; 2018.ipfsun.com all rights reserved.黑icp备12000570-3号</div>
+          <div class="copyright-part mtb_10">Copyright &copy; 2018.ipfsun.com All rights reserved.黑ICP备12000570-3号</div>
           <div class="social_icon">
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -300,11 +300,11 @@
       </div>
     </div>
   </div>
-  <!-- =====  footer end  ===== -->
+  <!-- =====  FOOTER END  ===== -->
 </div>
-<!-- =====  wrapper end  ===== -->
-<!-- =====  script start  ===== -->
-<script src="filecoin/js/jquery_v3.1.1.min.js"></script>
+<!-- =====  WRAPPER END  ===== -->
+<!-- =====  SCRIPT START  ===== -->
+<script src="filecoin/js/jQuery_v3.1.1.min.js"></script>
 <script src="filecoin/js/owl.carousel.min.js"></script>
 <script src="filecoin/js/bootstrap.min.js"></script>
 <script src="filecoin/js/letters-type.js"></script>
@@ -315,19 +315,19 @@
 <script src="filecoin/js/circle-progress.js"></script>
 <script src="filecoin/js/circle-progress-examples.js"></script>
 <script src="filecoin/js/parallax.js"></script>
-<script src="filecoin/js/jquery.easescroll.js"></script>
+<script src="filecoin/js/jquery.easeScroll.js"></script>
 <script type="text/javascript">
-    $("html").easescroll();
-    // add scrollspy to <body>
+    $("html").easeScroll();
+    // Add scrollspy to <body>
     $('body').scrollspy({ target: '#menu' })
     $("#menu ul li a[href^='#'], .home-arrow-down a").on('click', function(e) {
         // prevent default anchor click behavior
-        e.preventdefault();
+        e.preventDefault();
         // store hash
         var hash = this.hash;
         // animate
         $('html, body').animate({
-            scrolltop: $(hash).offset().top
+            scrollTop: $(hash).offset().top
         }, 1500, function() {
             // when done, add hash to url
             // (default click behaviour)
@@ -336,13 +336,13 @@
     });
     var _hmt = _hmt || [];
     (function() {
-        var hm = document.createelement("script");
+        var hm = document.createElement("script");
         hm.src = "https://hm.baidu.com/hm.js?6beaad5d2a7d4de50e00d613ae744d30";
-        var s = document.getelementsbytagname("script")[0];
-        s.parentnode.insertbefore(hm, s);
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
     })();
 </script>
-<!-- =====  script end  ===== -->
+<!-- =====  SCRIPT END  ===== -->
 </body>
 
 </html>
