每个页面都分配单独的js,以便于混淆加密

--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -76,7 +76,7 @@
 					<label class="frm_label">内测邀请码</label>
 					<div class="frm_controls">
 						<input type="text" id="vcode" name="vcode" class="frm_input " maxlength="6" value=""/>
-						<p class="changeVerifyCode" id="needCliekP">您必须输入邀请码才能注册。如没有请加QQ群：22138062 获取。</p>
+						<p class="changeVerifyCode" id="needCliekP">您必须输入邀请码才能注册。如没有请加QQ群获取。</p>
 					</div>
 				</div>
 
