1.增加lombok 2.增加密码修改部分逻辑

--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -58,7 +58,7 @@
         <h1 class="cd-headline letters type">
             <span class="cd-words-wrapper waiting">
               <b class="is-visible">星际文件系统云矿池</b>
-              <b>等待IPFS主网上线开启</b>
+              <b>等待FileCoin主网上线开启</b>
               <b>内测节点开放注册</b>
             </span>
         </h1>
