--- a/src/main/resources/views/modules/filecoin/index-dashboard.html
+++ b/src/main/resources/views/modules/filecoin/index-dashboard.html
@@ -65,7 +65,7 @@
 
     </div>
     <div class='quick-area'>
-        <div class='pull-left'>
+        <div class='pull-left' style="display:none;">
             <ul class="info-menu left-links list-inline list-unstyled">
 
 
@@ -160,7 +160,7 @@
             <ul class="info-menu right-links list-inline list-unstyled">
                 <li class="profile">
                     <a href="#" data-toggle="dropdown" class="toggle">
-                        <span id="userNameo"> <i class="fa fa-angle-down"></i></span>
+                        <span id="userNameo"> </span><i class="fa fa-chevron-down"></i>
                     </a>
                     <ul class="dropdown-menu profile animated fadeIn">
                         <li>
@@ -407,41 +407,6 @@
 
                                     </thead>
                                     <tbody id="coinTickersTbody">
-                                    <tr>
-                                        <th><i class="fa fa-dot-circle-o complete"></i>LBank</th>
-                                        <td>FIL6</td>
-                                        <td>$10.56</td>
-                                        <td>1.82%</td>
-                                    </tr>
-                                    <tr>
-                                        <th>&nbsp;</th>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                    </tr>
-                                    <tr>
-                                        <th>&nbsp;</th>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                    </tr>
-                                    <tr>
-                                        <th>&nbsp;</th>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                    </tr>
-                                    <tr>
-                                        <th>&nbsp;</th>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                        <td>&nbsp;</td>
-                                    </tr>
-                                    <tr>
-                                        <th colspan="4" align="right">上次更新时间：2018年6月23日 19：41</th>
-                                    </tr>
-                                    <!-- Repeat -->
-
                                     </tbody>
                                 </table>
                             </div>
@@ -464,7 +429,7 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="transfer-wraper">
-                                    <div class="form-group no-mb">
+                                    <div id="noticeDiv" class="form-group no-mb">
                                         <div class="input-group mb-10">
                                             <span class="input-group-addon">1</span>
                                             <span class="form-control">矿池开放注册</span>
@@ -593,7 +558,6 @@
         </div>
     </section>
     <!-- END CONTENT -->
-
 
     <div class="chatapi-windows ">
 
