--- a/src/main/resources/views/modules/filecoin/kb.html
+++ b/src/main/resources/views/modules/filecoin/kb.html
@@ -57,7 +57,7 @@
 
         </div>
         <div class='quick-area'>
-            <div class='pull-left'>
+            <div class='pull-left' style="display:none;">
                 <ul class="info-menu left-links list-inline list-unstyled">
                     
                     
