--- a/src/main/resources/views/modules/filecoin/login.html
+++ b/src/main/resources/views/modules/filecoin/login.html
@@ -11,7 +11,13 @@
     <title>IPFS星际云矿池</title>
     <meta content="" name="description" />
     <meta content="" name="author" />
-
+    <!-- =====  SEO MATE  ===== -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="keywords" content="IPFS,ipfs矿池,IPFS星际云矿池,ipfs挖矿教程,ipfs挖矿,ipfs官网,ipfs filecoin官网,ipfs和storj,ipfsun,filecoin,星际网络传输协议,区块链,ipfs协议">
+    <meta name="description" content="IPFS星际文件云矿池，星际文件系统IPFS（InterPlanetary File System）是一个面向全球的、点对点的分布式版本文件系统，目标是为了补充（甚至是取代）目前统治互联网的超文本传输协议（HTTP），将所有具有相同文件系统的计算设备连接在…最好的ipfs爱好者聚集地Just for IPFS">
+    <!-- =====  MOBILE SPECIFICATION  ===== -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width">
     <!-- Favicon -->
     <link rel="shortcut icon" href="../../filecoin/assets/images/favicon.png" type="image/x-icon" />
     <!-- For iPhone -->
