--- a/src/main/resources/views/modules/filecoin/miner.html
+++ b/src/main/resources/views/modules/filecoin/miner.html
@@ -57,7 +57,7 @@
 
         </div>
         <div class='quick-area'>
-            <div class='pull-left'>
+            <div class='pull-left' style="display:none;">
                 <ul class="info-menu left-links list-inline list-unstyled">
                     
                     
@@ -152,7 +152,7 @@
                 <ul class="info-menu right-links list-inline list-unstyled">
                     <li class="profile">
                         <a href="#" data-toggle="dropdown" class="toggle">
-                           <span id="userNameo"> <i class="fa fa-angle-down"></i></span>
+                            <span id="userNameo"> </span><i class="fa fa-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu profile animated fadeIn">
                             <li>
@@ -292,9 +292,9 @@
                                         <div class="left-col">
                                             <h2 class="mt-20"><small>运行概要</small></h2>
                                             <div class="col-xs-12 no-pl mt-10">
-                                                <a href="buy-and-sell.html" class="btn btn-primary btn-corner right15">Total</a>
+                                                <a href="#" class="btn btn-primary btn-corner right15">Total</a>
                                             
-                                                <a href="buy-and-sell.html" class="btn btn-primary btn-corner right15" >Avg/Node</a>
+                                                <a href="#" class="btn btn-primary btn-corner right15" >Avg/Node</a>
                                                 <a href="#" class="btn btn-primary btn-corner right15">Change 3h</a>
                                                  <a href="#" class="btn btn-primary btn-corner right15">Change 24h</a>
                                                   <a href="#" class="btn btn-primary btn-corner right15">Change 7d</a>
