--- a/src/main/resources/views/modules/filecoin/pay.html
+++ b/src/main/resources/views/modules/filecoin/pay.html
@@ -57,7 +57,7 @@
 
         </div>
         <div class='quick-area'>
-            <div class='pull-left'>
+            <div class='pull-left' style="display:none;">
                 <ul class="info-menu left-links list-inline list-unstyled">
                     
                     
@@ -152,7 +152,7 @@
                 <ul class="info-menu right-links list-inline list-unstyled">
                     <li class="profile">
                         <a href="#" data-toggle="dropdown" class="toggle">
-                           <span id="userNameo"> <i class="fa fa-angle-down"></i></span>
+                            <span id="userNameo"> </span><i class="fa fa-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu profile animated fadeIn">
                             <li>
