--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -67,7 +67,7 @@
         <button class="custom-btn custom-btns light" type="button"><span style="font-weight:bold;font-size:24px;font-family:'微软雅黑';" class="regeister">内测资格注册</span></button>
         <div class="home-arrow-down"> <a href="#about"><i class="fa fa-long-arrow-down"></i></a>
 
-          <p class="mt_20 light"><span class="nodesum">注册节点<span class="nodecolor">12323pcs</span></span><span class="nodesum">共享宽带<span class="nodecolor">23423MBps</span></span><span class="nodesum">共享存储<span class="nodecolorno">23423T</span></span></p>
+          <p class="mt_20 light"><span class="nodesum">注册节点<span class="nodecolor">12323pcs</span></span><span class="nodesum">共享宽带<span class="nodecolor">23423MBps</span></span><span class="nodesum">共享存储<span class="nodecolor">23423T</span></span></p>
         </div>
       </div>
     </div>
@@ -304,18 +304,33 @@
 </div>
 <!-- =====  WRAPPER END  ===== -->
 <!-- =====  SCRIPT START  ===== -->
-<script src="filecoin/js/jQuery_v3.1.1.min.js"></script>
-<script src="filecoin/js/owl.carousel.min.js"></script>
-<script src="filecoin/js/bootstrap.min.js"></script>
-<script src="filecoin/js/letters-type.js"></script>
-<script src="filecoin/js/menu.js"></script>
-<script src="filecoin/js/custom.js"></script>
-<script src="filecoin/js/particles/particles.js"></script>
-<script src="filecoin/js/particles/app.js"></script>
-<script src="filecoin/js/circle-progress.js"></script>
-<script src="filecoin/js/circle-progress-examples.js"></script>
-<script src="filecoin/js/parallax.js"></script>
-<script src="filecoin/js/jquery.easeScroll.js"></script>
+<script src="/filecoin/js/jQuery_v3.1.1.min.js"></script>
+<script src="/filecoin/js/owl.carousel.min.js"></script>
+<script src="/filecoin/js/bootstrap.min.js"></script>
+<script src="/filecoin/js/letters-type.js"></script>
+<script src="/filecoin/js/menu.js"></script>
+<script src="/filecoin/js/custom.js"></script>
+<script src="/filecoin/js/particles/particles.js"></script>
+<script src="/filecoin/js/particles/app.js"></script>
+<script src="/filecoin/js/circle-progress.js"></script>
+<script src="/filecoin/js/circle-progress-examples.js"></script>
+<script src="/filecoin/js/parallax.js"></script>
+<script src="/filecoin/js/jquery.easeScroll.js"></script>
+
+<script src="/plugins/layer/layer.js"></script>
+<script src="/plugins/jsMap.js"></script>
+<script src="/plugins/common.js"></script>
+<script src="/plugins/public.js"></script>
+<!-- jQuery Validation plugin javascript-->
+<script src="/plugins/jquery-validation/js/jquery.validate.js"></script>
+<!-- 自定义validation方法 -->
+<script src="/plugins/jquery-validation/js/additional-methods.js"></script>
+<!-- jquery validation 默认中文返回信息js  -->
+<script src="/plugins/jquery-validation/js/localization/messages_zh.min.js"></script>
+<script src="/plugins/jquery-validation/form-validate-demo.js"></script>
+<script src="/plugins/jquery.params.js"></script>
+<script src="/js/modules/filecoin/index.js"></script>
+
 <script type="text/javascript">
     $("html").easeScroll();
     // Add scrollspy to <body>
