--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -209,16 +209,16 @@
 
 
 						</div>
-						<p class="t_sas">单位：T</p>
+						<p class="t_sas" id="storageLen_changeTipsHere">单位：T</p>
 					</div>
 					<div class="i_tips"></div>
 				</div>
 				<div class="frm_control_group">
 					<label class="frm_label">带宽大小</label>
 					<div class="frm_controls">
-						<input type="text" name="bandWidth" id="bandWidth" readonly class="frm_input bandWidth"/>
+						<input type="text" name="bandWidth" id="bandWidth" value="0" readonly class="frm_input bandWidth"/>
 						<img id="bandWidthImg" height='300' style="display:none;" src=''  width='400'/>
-						<input type="button" value="在线测速" id="bandWidthBtn" class="btn btn_default" />
+						<input type="button" value="在线测速" id="bandWidth_changeTipsHere" class="btn btn_default" />
 						<p class="t_sas">单位：M</p>
 					</div>
 				</div>
