--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -15,11 +15,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="viewport" content="width=device-width">
   <!-- =====  CSS  ===== -->
-  <link rel="stylesheet" type="text/css" href="filecoin/css/bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="filecoin/css/menu.css">
-  <link rel="stylesheet" type="text/css" href="filecoin/css/style.css">
-  <link rel="stylesheet" type="text/css" href="filecoin/css/owl.carousel.css">
-  <link rel="shortcut icon" href="filecoin/assets/images/favicon.png" type="image/x-icon"/>
+  <link rel="stylesheet" type="text/css" href="/filecoin/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="/filecoin/css/menu.css">
+  <link rel="stylesheet" type="text/css" href="/filecoin/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/filecoin/css/owl.carousel.css">
+  <link rel="shortcut icon" href="/filecoin/assets/images/favicon.png" type="image/x-icon"/>
 
 </head>
 
@@ -32,7 +32,7 @@
     <div class="header navbar">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header pull-left"> <a class="navbar-brand" href="index.html"> <img alt="Bitcoin" src="filecoin/images/logo2.png"> </a> </div>
+        <div class="navbar-header pull-left"> <a class="navbar-brand" href="index.html"> <img alt="Bitcoin" src="/filecoin/images/logo2.png"> </a> </div>
         <!-- Collection of nav links, forms, and other content for toggling -->
         <div id="navbarCollapse" class="navbar-collapse navbar-right">
           <nav id="menu" class='collapse'>
@@ -40,8 +40,8 @@
             <ul class="nav">
               <li class="active"> <a href="#home2">首页</a></li>
               <li> <a href="#team">交流群</a></li>
-              <li> <a href="modules/filecoin/login.html">登录</a></li>
-              <li> <a href="modules/filecoin/regist.html">注册</a></li>
+              <li> <a href="/modules/filecoin/login.html">登录</a></li>
+              <li> <a href="/modules/filecoin/regist.html">注册</a></li>
             </ul>
             <!--End Navigation Menu -->
           </nav>
