增加验证码输入框keyup 13 也就是回车按钮事件 将该事件提取到html,以免影响混淆加密js

--- a/src/main/resources/views/modules/filecoin/login.html
+++ b/src/main/resources/views/modules/filecoin/login.html
@@ -11,7 +11,7 @@
     <title>IPFS星际云矿池</title>
     <!-- =====  SEO MATE  ===== -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords" content="IPFS,ipfs矿池,IPFS星际云矿池,ipfs挖矿教程,ipfs挖矿,ipfs官网,ipfs filecoin官网,ipfs和storj,ipfsun,filecoin,星际网络传输协议,区块链,ipfs协议">
+    <meta name="keywords" content="IPFS,ipfs矿池,filecoin矿池,IPFS星际云矿池,filecoin星际云矿池,ipfs挖矿教程,ipfs挖矿软件,ipfs官网,ipfs filecoin官网,ipfs和storj,ipfsun,filecoin,星际网络传输协议,区块链,ipfs协议,filecoin硬盘挖矿教程,ipfs硬盘挖矿教程,ipfs挖矿收益,filecoin挖矿收益,filecoin挖矿软件,ipfs挖矿系统,ipfs挖矿软件,ipfs挖矿带宽,storj挖矿,filecoin挖矿软件,ipfs如何挖矿,filecoin如何挖矿,ipfs挖矿收益,filecoin挖矿收益">
     <meta name="description" content="IPFS星际文件云矿池，星际文件系统IPFS（InterPlanetary File System）是一个面向全球的、点对点的分布式版本文件系统，目标是为了补充（甚至是取代）目前统治互联网的超文本传输协议（HTTP），将所有具有相同文件系统的计算设备连接在…最好的ipfs爱好者聚集地Just for IPFS">
     <!-- =====  MOBILE SPECIFICATION  ===== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -179,6 +179,14 @@
 
 <script type="text/javascript">
     var ctx = "";
+    $(function () {
+        $("#captcha").keyup(function(event){
+            if(event.keyCode == "13"){
+                $("#msg_validate").submit();
+            }
+        });
+    });
+
 </script>
 </body>
 
