1.暂时去掉job定时任务集群 2.修改miner.html 退出按钮不好使 3.增加App主函数开启定时任务注解 4.在task函数中 可以使用sc注解进行定时任务处理,但该注解方法必须不能有入参

--- a/src/main/resources/views/modules/filecoin/login.html
+++ b/src/main/resources/views/modules/filecoin/login.html
@@ -181,7 +181,7 @@
     var ctx = "";
     $(function () {
         $("#captcha").keyup(function(event){
-            if(event.keyCode == "13"){
+            if(event.keyCode === 13){
                 $("#msg_validate").submit();
             }
         });
