1.修改图片 2.修改矿工资料，待完善

--- a/src/main/resources/views/modules/filecoin/highway.html
+++ b/src/main/resources/views/modules/filecoin/highway.html
@@ -566,7 +566,7 @@
                 <div class="clearfix"></div>
 
 
-<div class="col-lg-4">
+<div class="col-lg-4" style="display: none">
                     <section class="box has-border-left-3">
                             <header class="panel_header">
                                 <h2 class="title pull-left">星际云star矿机</h2>
@@ -608,7 +608,7 @@
                     </section>
                 </div>
                 
-                <div class="col-lg-4">
+                <div class="col-lg-4" style="display: none">
                     <section class="box has-border-left-3">
                             <header class="panel_header">
                                 <h2 class="title pull-left">星际云sun矿机</h2>
@@ -651,7 +651,7 @@
                 </div>
                 
                 
-                <div class="col-lg-4">
+                <div class="col-lg-4" style="display: none">
                     <section class="box has-border-left-3">
                             <header class="panel_header">
                                 <h2 class="title pull-left">星际云moon矿机</h2>
