--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -173,12 +173,15 @@
 				<div class="frm_control_group">
 					<label class="frm_label">矿机所在位置</label>
 					<div class="frm_controls">
+						<select name="minerMachineAddr_Sel">
+							<option value="中国大陆">中国大陆</option>
+						</select>
 						<input type="text" name="minerMachineAddr" id="minerMachineAddr" class="frm_input minerMachineAddr" maxlength="32"/>
 						<p class="frm_tips">输入您的所在位置</p>
 					</div>
 				</div>
 				<div class="frm_control_group">
-					<label class="frm_label">矿机存放环境</label>
+					<label class="frm_label">认购矿机类型</label>
 					<div class="frm_controls">
 						<input type="text" name="minerMachineEnv" id="minerMachineEnv" maxlength="32" class="frm_input minerMachineEnv"/>
 						<p class="frm_tips">矿机存放位置：例如IDC机房、矿场、家庭、单位</p>
