--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -197,8 +197,8 @@
             </div>
             <div class="item team-detail">
               <div class="team-item-img"> <img src="filecoin/images/tm2.jpg"> </div>
-              <div class="team-designation mt_20">官方QQ_2群</div>
-              <h3 class="team-title  mt_10 mb_20"><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=c4edd78905015f60a969703679d374b9d3f0f900a35e580a7e079fc16227a8ee"><img border="0" style="display:block;width:90px;margin-left:auto;margin-right:auto;margin-bottom:10px;" src="filecoin/images/group.png" alt="IPFS挖矿矿池交流群" title="IPFS挖矿矿池交流群">22138088</a>
+              <div class="team-designation mt_20">微信公众号</div>
+              <!--<h3 class="team-title  mt_10 mb_20"><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=c4edd78905015f60a969703679d374b9d3f0f900a35e580a7e079fc16227a8ee"><img border="0" style="display:block;width:90px;margin-left:auto;margin-right:auto;margin-bottom:10px;" src="filecoin/images/group.png" alt="IPFS挖矿矿池交流群" title="IPFS挖矿矿池交流群">22138088</a>-->
               </h3>
 
             </div>
